namespace SECompass.BusinessLogic.DTOs.CareerRole;

public class CareerRoleDto
{
    public Guid Id { get; set; }
    public string Name { get; set; } = string.Empty;
    public string? Description { get; set; }
    public DateTime CreatedAt { get; set; }
}
