namespace SECompass.BusinessLogic.DTOs.Skill;

public class TechnicalSkillDto
{
    public Guid Id { get; set; }
    public string Name { get; set; } = string.Empty;
    public string Category { get; set; } = string.Empty;
}
