erDiagram
    %% Standalone Entities (Market Pulse / Job Trend Scraping)
    JobTrend
    JobScrapingSetting
    JobScrapingSource

    %% Core User & Profile Entities
    User ||--|| Profile : "1:1 (Shared PK)"
    Profile ||--o{ GitHubRepository : "owns"
    Profile ||--|| PublicPortfolio : "1:1 (owns portfolio)"
    Profile ||--o{ ChatSession : "initiates"
    ChatSession ||--o{ ChatMessage : "contains"
    User ||--|{ UserRefreshToken : "issues"

    %% Career & Roadmap Template Entities
    CareerRole ||--o{ CareerRoadmap : "categorizes"
    
    %% Personalization Entities
    CareerRoadmap ||--o{ PersonalRoadmap : "serves as template for"
    Profile ||--o{ PersonalRoadmap : "owns"

    %% Hierarchy & Junction Entities
    CareerRoadmap ||--o{ RoadmapNode : "has many"
    Node ||--o{ RoadmapNode : "is mapped to"
    RoadmapNode |o--o{ RoadmapNode : "has child roadmap nodes"
    CareerRoadmap ||--o{ RoadmapNodeEdge : "defines connections"
    RoadmapNode ||--o{ RoadmapNodeEdge : "connects from"
    RoadmapNode ||--o{ RoadmapNodeEdge : "connects to"
    
    PersonalRoadmap ||--o{ NodeProgress : "tracks"
    RoadmapNode ||--o{ NodeProgress : "progress status for"

    Node ||--o{ LearningResource : "directly owns (1:M)"
    Node |o--o{ Node : "parent/child self-reference"

    %% Skill Taxonomy Entities
    Profile ||--o{ ProfileTechnicalSkill : "has skills"
    TechnicalSkill ||--o{ ProfileTechnicalSkill : "is selected by profiles"
    Node ||--o{ NodeTechnicalSkill : "requires skills"
    TechnicalSkill ||--o{ NodeTechnicalSkill : "is required by nodes"
